<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/question" />

    <RadioGroup
        android:id="@+id/answerRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/answer1RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_1" />

        <RadioButton
            android:id="@+id/answer2RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_2" />

        <RadioButton
            android:id="@+id/answer3RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_3" />

        <RadioButton
            android:id="@+id/answer4RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_4" />

    </RadioGroup>

    <Button
        android:id="@+id/submitAnswerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_answer" />

    <TextView
        android:id="@+id/feedbackTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="italic"
        android:text="@string/feedback" />

    <Button
        android:id="@+id/previousButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/previous" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next" />

    <Button
        android:id="@+id/showAnswerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/short_description" />

</LinearLayout>
